--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "author": "Cxin",
     "license": "nonee",
     "dependencies": {
+        "@mercuryworkshop/bare-mux": "latest",
+        "@mercuryworkshop/epoxy-transport": "latest", 
+        "@mercuryworkshop/libcurl-transport": "latest",
+        "@mercuryworkshop/wisp-js": "latest",
         "@tomphttp/bare-server-node": "2.0.3",
         "chalk": "^5.3.0",
-        "express": "^4.18.3"
+        "express": "^4.18.3",
+        "express-rate-limit": "^7.1.5",
+        "helmet": "^7.1.0"
     }
 }
